...
        actions = {
            IconButton(
                onClick = logout
            ) {
                Icon(
                    imageVector = ImageVector.vectorResource(id = R.drawable.logout_icon),
                    contentDescription = "logout icon",
                )
            }
        }

//        TODO setting 화면 가능하면 추가
//        actions = {
...
